--- a/src/templates/accounts/dashboard/email_and_password_detail.html
+++ b/src/templates/accounts/dashboard/email_and_password_detail.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {% load template_filters %}
 <div class=" p-5">
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">آدرس ایمیل</h6>
+            <h6 class="mb-0">{% trans "Email" %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             {{ request.user.email|default_if_none }}
@@ -11,7 +12,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">رمز عبور</h6>
+            <h6 class="mb-0">{% trans "Password" %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             **********************
@@ -22,7 +23,7 @@
     <!-- edit button -->
     <div class="d-grid gap-2">
         <a class="btn btn-info fw-bold fs-5"
-           href="{% url 'accounts:email-and-password-update' %}">ویرایش</a>
+           href="{% url 'accounts:email-and-password-update' %}">{% trans "Edit" %}</a>
     </div>
     <!-- edit button -->
 </div>
