--- a/src/templates/accounts/dashboard/user_address_detail.html
+++ b/src/templates/accounts/dashboard/user_address_detail.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 {% load template_filters %}
 <div class=" p-5">
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">عنوان آدرس</h6>
+            <h6 class="mb-0">{% trans "Address Label" %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             {{ user_address.label|default_if_none }}
@@ -11,7 +12,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">استان</h6>
+            <h6 class="mb-0">{% trans "Province" %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             {{ user_address.province|default_if_none }}
@@ -20,7 +21,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">محله</h6>
+            <h6 class="mb-0">{% trans "Neighborhood" %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             {{ user_address.neighborhood|default_if_none }}
@@ -29,7 +30,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">خیابان</h6>
+            <h6 class="mb-0">{% trans "Street" %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             {{ user_address.street|default_if_none }}
@@ -38,7 +39,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">کوچه</h6>
+            <h6 class="mb-0">{% trans "Alley" %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             {{ user_address.alley|date }}
@@ -47,7 +48,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">پلاک</h6>
+            <h6 class="mb-0">{% trans "No." %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             {{ user_address.no|default_if_none }}
@@ -56,7 +57,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-3">
-            <h6 class="mb-0">کد پستی</h6>
+            <h6 class="mb-0">{% trans "Zipcode" %}</h6>
         </div>
         <div class="col-sm-8 text-secondary">
             {{ user_address.zipcode|default_if_none }}
@@ -67,7 +68,7 @@
     <!-- edit button -->
     <div class="d-grid gap-2">
         <a class="btn btn-info fw-bold fs-5"
-           href="{% url 'accounts:user-address-update' user_address.id %}">ویرایش</a>
+           href="{% url 'accounts:user-address-update' user_address.id %}">{% trans "Edit" %}</a>
     </div>
     <!-- edit button -->
 </div>
