--- a/src/templates/customers/dashboard/order_list.html
+++ b/src/templates/customers/dashboard/order_list.html
@@ -1,12 +1,13 @@
+{% load i18n %}
 {% load static  template_filters %}
 <table class="table table-striped align-middle">
     <thead>
     <tr>
         <th scope="col">#</th>
-        <th scope="col">شماره سفارش</th>
-        <th scope="col">تاریخ ثبت</th>
-        <th scope="col">قیمت نهایی</th>
-        <th scope="col">جزئیات</th>
+        <th scope="col">{% trans "Order Number" %}</th>
+        <th scope="col">{% trans "Submitted Date" %}</th>
+        <th scope="col">{% trans "Total Price" %}</th>
+        <th scope="col">{% trans "Detail" %}</th>
     </tr>
     </thead>
     <tbody>
