--- a/src/templates/products/store_product_list_in_store.html
+++ b/src/templates/products/store_product_list_in_store.html
@@ -1,4 +1,5 @@
 {% extends 'website/base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block css %}
@@ -7,31 +8,31 @@
 {% block content %}
     <div id="store-product-container" class="container">
         <div class="row border rounded-3 mx-auto mt-5 pt-3 bg-white">
-            <h2 class="text-center">محصولات <span id="store-name"></span></h2>
+            <h2 class="text-center">{% trans "Products" %} <span id="store-name"></span></h2>
             <!-- filtering -->
             <div class="row">
                 <div class="d-flex ">
-                    <h6 class="my-auto">مرتب سازی: </h6>
+                    <h6 class="my-auto">{% trans "Order By" %}: </h6>
                     <ul class="nav nav-underline">
                         <li class="nav-item">
                             <a id="best-seller-link" class="nav-link"
                                aria-current="page"
                                href="">
-                                پرفروش ترین
+                               {% trans "Best Seller" %}
                             </a>
                         </li>
                         <li class="nav-item">
                             <a id="top-rating-link" class="nav-link"
                                aria-current="page"
                                href="">
-                                بالاترین امتیاز
+                                {% trans "Highest Rating" %}
                             </a>
                         </li>
                         <li class="nav-item">
                             <a id="recently-created-link" class="nav-link"
                                aria-current="page"
                                href="">
-                                گرانترین
+                                {% trans "Most Expensive" %}
                             </a>
                         </li>
                     </ul>
@@ -49,12 +50,12 @@
                 <nav aria-label="..." dir="ltr">
                     <ul class="pagination">
                         <li class="page-item">
-                            <button id="pagination-previous-btn" class="page-link">Previous</button>
+                            <button id="pagination-previous-btn" class="page-link">{% trans "Previous" %}</button>
                         </li>
                         <li class="page-item"><a id="pagination-current-page-number" class="page-link"
                                                  href="#">3</a></li>
                         <li class="page-item">
-                            <button id="pagination-next-btn" class="page-link" href="#">Next</button>
+                            <button id="pagination-next-btn" class="page-link" href="#">{% trans "Next" %}</button>
                         </li>
                     </ul>
                 </nav>
