--- a/src/templates/website/index.html
+++ b/src/templates/website/index.html
@@ -1,5 +1,5 @@
 {% extends 'website/base.html' %}
-{% load static %}
+{% load static i18n %}
 
 {% block css %}
 
@@ -8,7 +8,7 @@
 {% block content %}
     <div id="products-container" class="container">
         <div class="row border rounded-3 mx-auto mt-5 pt-3 bg-white">
-            <h2 class="text-center">محصولات</h2>
+            <h2 class="text-center">{% trans "Products" %}</h2>
 
             <!-- card groups -->
             <div id="card-group-store-products" class="row row-cols-md-5 g-4 m-auto pb-4">
@@ -19,7 +19,7 @@
             <div class="row container-fluid p-3 justify-content-start">
                 <div class="d-grid gap-2 col-6 mx-auto">
                     <a href="{% url 'products:store-product-list' %}"
-                       class="btn btn-outline-primary">مشاهــــده همه</a>
+                       class="btn btn-outline-primary">{% trans "View All" %}</a>
                 </div>
             </div>
             <!-- view all -->
@@ -38,7 +38,7 @@
             <div class="row container-fluid p-3 justify-content-start">
                 <div class="d-grid gap-2 col-6 mx-auto">
                     <a href="{% url 'vendors:store_list' %}"
-                       class="btn btn-outline-primary">مشاهــــده همه</a>
+                       class="btn btn-outline-primary">{% trans "View All" %}</a>
                 </div>
             </div>
             <!-- view all -->
@@ -48,7 +48,7 @@
 
     <div id="categories-container" class="container">
         <div class="row border rounded-3 mx-auto mt-5 pt-3 bg-white">
-            <h2 class="text-center">دسته بندی ها</h2>
+            <h2 class="text-center">{% trans "Categories" %}</h2>
         </div>
     </div>
 
