--- a/src/templates/website/sections/header.html
+++ b/src/templates/website/sections/header.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 <header class="container-fluid sticky-top p-0 shadow">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -30,19 +30,48 @@
                 <!-- Home icon -->
 
                 <li id="stores-link" class="nav-item">
-                    <a class="nav-link" href="{% url 'vendors:store_list' %}">فروشگاه ها</a>
+                    <a class="nav-link" href="{% url 'vendors:store_list' %}">{% trans "Stores" %}</a>
                 </li>
                 <li id="products-link" class="nav-item">
-                    <a class="nav-link" href="{% url 'products:store-product-list' %}">محصولات</a>
+                    <a class="nav-link" href="{% url 'products:store-product-list' %}">{% trans "Products" %}</a>
                 </li>
                 <li id="categories-link" class="nav-item">
-                    <a class="nav-link" href="#">دسته بندی ها</a>
+                    <a class="nav-link" href="#">{% trans "Categories" %}</a>
                 </li>
             </ul>
             <!-- middle navbar -->
 
             <!-- cart | login  -->
             <ul class="navbar-nav">
+                <li>
+
+                    {% get_current_language as CURRENT_LANGUAGE %}
+                    {% get_available_languages as AVAILABLE_LANGUAGES %}
+                    {% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
+                    <div class="languages">
+                        <div class="btn-group mx-3">
+                            <button type="button"
+                                    class="btn  dropdown-toggle btn-outline-secondary rounded font-weight-bold"
+                                    data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 24 24">
+                                    <path fill="currentColor"
+                                          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95a15.7 15.7 0 0 0-1.38-3.56A8.03 8.03 0 0 1 18.92 8M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56A8 8 0 0 1 5.08 16m2.95-8H5.08a8 8 0 0 1 4.33-3.56A15.7 15.7 0 0 0 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95a8.03 8.03 0 0 1-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"></path>
+                                </svg>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-dark ">
+                                {% for language in languages %}
+                                    <li>
+                                        <a class="dropdown-item m-0" href="/{{ language.code }}/">
+                                            {{ language.name_local }}
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+
                 <li class="nav-item">
                     <!-- login and user management button -->
                     {% if request.user.is_authenticated %}
@@ -70,12 +99,12 @@
                                     {% if is_customer %}
                                         <a class="dropdown-item m-0"
                                            href="{% url 'accounts:personal-info-detail' %}">
-                                            داشبورد
+                                            {% trans "Dashboard" %}
                                         </a>
                                     {% elif is_staff or is_superuser %}
                                         <a class="dropdown-item m-0"
                                            href="{% url 'accounts:personal-info-detail' %}">
-                                            داشبورد
+                                            {% trans "Dashboard" %}
                                         </a>
                                     {% endif %}
                                 </li>
@@ -85,7 +114,7 @@
                                 <li>
                                     <form action="{% url 'accounts:logout' %}" method="post">
                                         {% csrf_token %}
-                                        <button type="submit" class="dropdown-item m-0">خروج</button>
+                                        <button type="submit" class="dropdown-item m-0">{% trans "Log Out" %}</button>
                                     </form>
                                 </li>
                                 <!-- logout -->
@@ -94,7 +123,7 @@
                         </div>
                     {% else %}
                         <a class="btn btn-outline-secondary" href="{% url 'accounts:login-email' %}">
-                            ورود | ثبت نام
+                            {% trans "Log In" %} | {% trans "Register" %}
                         </a>
                     {% endif %}
                     <!-- login and user management button -->
